@@ -1,3 +1,12 @@
+2008-09-30  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Mark Rowe.
+
+        Add WebKitAvailability macros for JSObjectMakeArray, JSObjectMakeDate, JSObjectMakeError,
+        and JSObjectMakeRegExp
+
+        * API/JSObjectRef.h:
+
 2008-09-30  Darin Adler  <darin@apple.com>
 
         Reviewed by Geoff Garen.
